# tracker

./: config.h.meson.in  meson.build
src/libtracker-sparql/: tracker-sparql.h
